--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-           <header class=""></header>
+           <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="./img/bikcraft.svg" alt="Bikecraft">
+             </a>
+            <nav aria-label="">
+            <ul class="header-menu"
+                <li><a href="./bicicletas.html">Bicicletas</a></li>
+                <li><a href="./seguros.html">seguros</a></li>
+                <li><a href="./contatos.html">contatos</a></li>
+            </ul>
+            
+            </nav>
+        </div>
+           </header>
     </body>
 </html>
